Upd Front bundle with symfony 3.2 and bootstrap 3.2

--- a/backend/src/Civix/FrontBundle/Resources/public/css/main.css
+++ b/backend/src/Civix/FrontBundle/Resources/public/css/main.css
@@ -123,9 +123,8 @@ a.dropdown-toggle::after {
 	display: block;
 }
 
-/* filter table*/
-div.filterOfTable label {
-	float: right;
+body {
+    padding-top: 90px;
 }
 
 #membership_membershipPasscode_control_group
