--- a/backend/src/Civix/FrontBundle/Resources/public/less/menu.less
+++ b/backend/src/Civix/FrontBundle/Resources/public/less/menu.less
@@ -1,88 +1,106 @@
-body > nav.navigation {
-  position: fixed;
-  top: 90px;
-  left: 0;
-  width: 250px;
-  background: #7eae33;
-  height: 100%;
-  color: #fff;
-  font-size: 13px;
+/*
+ * Base structure
+ */
 
-  a {
-    color: #fff;
-    text-indent: 60px;
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  padding-top: 90px;
+}
+
+
+/*
+ * Global add-ons
+ */
+
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+/*
+ * Top navigation
+ * Hide default border to remove 1px line.
+ */
+.navbar-fixed-top {
+  border: 0;
+}
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 90px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
     display: block;
-    position: relative;
-    &:hover {
-      text-decoration: none;
-    }
-
-    i {
-      display: block;
-      position: absolute;
-      background: url('/bundles/civixfront/img/icons/main_menu_sprite.png') 0 0 no-repeat;
-      background-size: 36px auto;
-      background-position: 0 0;
-      margin: 0;
-      width: 36px;
-      height: 50px;
-      left: 10px;
-      top: 0;
-      &.icon-poll {
-        background-position: 0 -45px;
-      }
-      &.icon-petition {
-        background-position: 0 -103px;
-      }
-      &.icon-alert {
-        background-position: 0 -158px;
-      }
-      &.icon-report {
-        background-position: 0 -268px;
-      }
-      &.icon-discussion {
-        background-position: 0 -216px;
-      }
-    }
-  }
-
-  a:hover, a:focus, a:active {
-    background: none;
-    text-decoration: underline;
-    outline: none;
-    border: none;
-  }
-
-  li {
-    line-height: 50px;
-    list-style: none;
-    &.active > a{
-      background-color: #8cb433;
-    }
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-
-  .dropdown-main {
-    .dropdown-main-menu {
-      display: none;
-    }
-    &.open .dropdown-main-menu {
-      display: block;
-      a{
-        text-indent: 70px;
-      }
-    }
-    &.active > a {
-      background-color: transparent;
-    }
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #7eae33;
+    border-right: 1px solid #eee;
   }
 }
 
-body > .container {
-  margin-left: 290px;
-  margin-top: 130px;
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  color: #fff;
+  padding-right: 20px;
+  padding-left: 60px;
+}
+.nav-sidebar > li > a:hover {
+  background-color: #7eae33;
+}
+.nav-sidebar > .active:hover > a,
+.nav-sidebar > .active > a {
+  background-color: #8cb433;
+}
+
+/*
+ * Main content
+ */
+
+.main {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
+}
+
+
+/*
+ * Placeholder dashboard ideas
+ */
+
+.placeholders {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.placeholders h4 {
+  margin-bottom: 0;
+}
+.placeholder {
+  margin-bottom: 20px;
+}
+.placeholder img {
+  display: inline-block;
+  border-radius: 50%;
 }
