--- a/backend/src/Civix/FrontBundle/Resources/views/Post/index.html.twig
+++ b/backend/src/Civix/FrontBundle/Resources/views/Post/index.html.twig
@@ -1,72 +1,63 @@
 {% extends 'CivixFrontBundle::layout.html.twig' %}
 
-{% block page_title %}Blog posts{% endblock %}
+{% block page_title %}Posts marked as spam{% endblock %}
 
 {% block content %}
-    <nav class="submenu">
-        <ul class="nav nav-pills pull-right">
-            <li class="first last">
-                <a href="{{ path('civix_front_' ~ app.user.type ~ '_post_new') }}">Create New Post</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="row">
+<section>
+    <div class="row-fluid">
         <div class="span12">
-            <h4>New Posts</h4>
-            <table class="table table-bordered table-striped">
-                <tr>
-                    <th class="span6">Title</th>
-                    <th class="span3">{{ knp_pagination_sortable(paginationNew, 'Created date', 'p.createdAt') }}</th>
-                    <th class="span3">Options</th>
-                </tr>
-                {% for item in paginationNew %}
-                    <tr>
-                        <td>{{ item.title }}</td>
-                        <td>{{ item.createdAt|date("d-m-Y H:i") }}</td>
-                        <td class="table-options">
-                             <a href="{{ path('civix_front_' ~ app.user.type ~ '_post_edit', {'id': item.id}) }}">Edit</a>
-                             <a href="{{ path('civix_front_' ~ app.user.type ~ '_post_publish', {'id': item.id}) }}">Publish</a>
-                             <a href="{{ path('civix_front_' ~ app.user.type ~ '_post_delete', {'id': item.id}) }}">Delete</a>
-                        </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="3" style="text-align: center">No new posts.</td>
-                    </tr>
-                {% endfor %}
-            </table>
-
-            <div class="navigation">
-                {{ knp_pagination_render(paginationNew) }}
-            </div>
+            <h3>Manage posts</h3>
         </div>
+    </div>
+    <div class="row-fluid">
         <div class="span12">
-            <h4>Published Posts</h4>
-            <table class="table table-bordered table-striped">
+            <table class="table table-striped table-bordered">
+                <thead>
                 <tr>
-                    <th class="span6">Title</th>
-                    <th class="span3">{{ knp_pagination_sortable(paginationPublished, 'Published date', 'p.publishedAt') }}</th>
-                    <th class="span3">Options</th>
+                    {# sorting of properties based on query components #}
+                    <th>{{ knp_pagination_sortable(pagination, 'Id', 'p.id') }}</th>
+                    <th>User Name</th>
+                    <th>Official Group Title</th>
+                    <th>Actions</th>
                 </tr>
-                {% for item in paginationPublished %}
+                </thead>
+                <tbody>
+                {% for post in pagination %}
                     <tr>
-                        <td>{{ item.title }}</td>
-                        <td>{{ item.publishedAt|date("d-m-Y H:i") }}</td>
+                        <td>{{ post.id }}</td>
                         <td>
-                            <a href="{{ path('civix_front_' ~ app.user.type ~ '_post_edit', {'id': item.id}) }}">Edit</a>
-                            <a href="{{ path('civix_front_' ~ app.user.type ~ '_post_delete', {'id': item.id}) }}">Delete</a>
+                            <a href="{{ path('civix_front_superuser_user_posts', {id: post.user.id}) }}">
+                                {{ post.user.firstname }} {{ post.user.lastname }}
+                            </a>
+                        </td>
+                        <td>{{ post.group.officialTitle }}</td>
+                        <td>
+                            {% if post.spamMarks.count() >= 4 %}
+                            <form class="form-link" action="{{ path('civix_front_superuser_post_delete', {'id': post.id}) }}" method="POST">
+                                <input type="hidden" name="_token" value="{{ csrf_token('post_delete') }}">
+                                <button type="submit" class="btn-link">
+                                    <i class="glyphicon glyphicon-remove"></i>
+                                    Remove post
+                                </button>
+                            </form>
+                            {% endif %}
+                            <form class="form-link" action="{{ path('civix_front_user_delete', {'id': post.user.id}) }}" method="POST">
+                                <input type="hidden" name="_token" value="{{ csrf_token('user_delete') }}">
+                                <button type="submit" class="btn-link">
+                                    <i class="glyphicon glyphicon-remove"></i>
+                                    Remove user
+                                </button>
+                            </form>
                         </td>
                     </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="43" style="text-align: center">No published posts.</td>
-                    </tr>
                 {% endfor %}
+                </tbody>
             </table>
-
+            {# display navigation #}
             <div class="navigation">
-                {{ knp_pagination_render(paginationPublished) }}
+                {{ knp_pagination_render(pagination) }}
             </div>
         </div>
     </div>
-{% endblock content %}
+</section>
+{% endblock %}
