--- a/backend/src/Civix/FrontBundle/Resources/views/layout.html.twig
+++ b/backend/src/Civix/FrontBundle/Resources/views/layout.html.twig
@@ -1,63 +1,79 @@
 {% extends 'MopaBootstrapBundle::base.html.twig' %}
 {% from 'MopaBootstrapBundle::flash.html.twig' import session_flash %}
 
-
 {% block title %}{% block page_title %}{% endblock %} - Powerline{% endblock title %}
 
 
 {% block head_style %}
-{% stylesheets filter='cssrewrite'
-         '@MopaBootstrapBundle/Resources/public/less/mopabootstrapbundle.less'
+    {% stylesheets
+    '@MopaBootstrapBundle/Resources/public/less/mopabootstrapbundle.less'
+    %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
+    {% endstylesheets %}
+    {% stylesheets filter='cssrewrite'
          '@CivixFrontBundle/Resources/public/css/bootstrap-fileupload.css'
          '@CivixFrontBundle/Resources/public/css/bootstrap-markdown.min.css'
          '@CivixFrontBundle/Resources/public/css/font-awesome.css'
          '@CivixFrontBundle/Resources/public/css/main.css'
          '@CivixFrontBundle/Resources/public/less/main.less'
-%}
-<link href="{{ asset_url }}" type="text/css" rel="stylesheet" />
-{% endstylesheets %}
+    %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet" />
+    {% endstylesheets %}
 {% endblock head_style%}
 
+{% block head_script %}
+{% javascripts
+'http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'
+%}
+<script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}
+{% endblock %}
 
 {% block body %}
 
-{%  render(controller('CivixFrontBundle:Default:header')) %}
+{{ render(controller('CivixFrontBundle:Default:header')) }}
 
-<nav class="navigation">
-    {% block navbar %}
-        {{ mopa_bootstrap_menu('frontendNavbar') }}
-    {% endblock navbar %}
-</nav>
-
-<div class="container">
-    {% block navbar_container %}
-
-    {% endblock navbar_container %}
-
-    <div class="content-block">
-        <div class="flash">
-            {% block flashes %}
-            {{ session_flash(false, false, true) }}
-            {% endblock flashes %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-4 col-md-3 sidebar">
+            {% block navbar %}
+                {{ mopa_bootstrap_menu('frontendNavbar') }}
+            {% endblock navbar %}
         </div>
-        <div class="content">
-            {% block content %}
-            {% endblock content %}
+        <div class="col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3 main">
+            {% block navbar_container %}
+
+            {% endblock navbar_container %}
+
+            <div class="flash">
+                {% block flashes %}
+                    {{ session_flash(false, false, true) }}
+                {% endblock flashes %}
+            </div>
+            <div class="content">
+                {% block content %}
+                {% endblock content %}
+            </div>
         </div>
     </div>
 </div>
 
-{% block foot_script %}
-    {{ parent() }}
-    {% javascripts
-    '@CivixFrontBundle/Resources/public/js/vendor/underscore/underscore-min.js'
-    '@CivixFrontBundle/Resources/public/js/bootstrap-fileupload.js'
-    '@CivixFrontBundle/Resources/public/js/auth.js'
-    '@CivixFrontBundle/Resources/public/js/payment.stripe.js'
-    %}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
+    {% block foot_script_assetic %}
+        {% javascripts
+        '@MopaBootstrapBundle/Resources/public/bootstrap/js/tooltip.js'
+        '@MopaBootstrapBundle/Resources/public/bootstrap/js/*.js'
+        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
+        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
+        '@CivixFrontBundle/Resources/public/js/vendor/underscore/underscore-min.js'
+        '@CivixFrontBundle/Resources/public/js/bootstrap-fileupload.js'
+        '@CivixFrontBundle/Resources/public/js/auth.js'
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+    {% endblock foot_script_assetic %}
+{% endblock body %}
 
+{% block body_end %}
     {% if app.user %}
         <script type="text/javascript">
             sessionStorage.userType = '{{ app.user.type }}';
@@ -68,5 +84,4 @@
             sessionStorage.clear();
         </script>
     {% endif %}
-{% endblock foot_script %}
-{% endblock body %}
+{% endblock body_end %}
