--- a/backend/deployment/ansible/roles/configure/templates/supervisor_subscriptions.j2
+++ b/backend/deployment/ansible/roles/configure/templates/supervisor_subscriptions.j2
@@ -1,5 +1,5 @@
 [program:{{ project }}_subscriptions]
-command=php /srv/{{ project }}/app/console subscriptions-renew:start -e=prod
+command=php /srv/{{ project }}/bin/console subscriptions-renew:start -e=prod
 autorestart=true
 user={{ project }}
 startretries=1000000000
