--- a/backend/src/Civix/ApiBundle/Resources/views/motd.html.twig
+++ b/backend/src/Civix/ApiBundle/Resources/views/motd.html.twig
@@ -4,25 +4,67 @@
             <div class="actions">
                 <a class="action-show-hide">Show/hide</a>
             </div>
-            <h1>Authentication</h1>
+            <h1 id="section-Authentication">Authentication</h1>
             <div class="section-list">
-                <p>There are two ways to authenticate through Powerline API.</p>
-                <h3>Bearer token (sent in a "Token" header)</h3>
-                <p><code>curl -H "Token: token" https://api.powerli.ne</code></p>
-                <h3>Bearer token (sent in a "Authorization" header)</h3>
-                <p><code>curl -H "Authorization: Bearer type='user' token='token'" https://api.powerli.ne</code></p>
+                <p>There are three ways to authenticate through Powerline API.</p>
+                <h3>Bearer token (sent in an "Authorization" header)</h3>
+                <p><code>curl -H "Authorization: Bearer TOKEN" https://api.powerli.ne</code></p>
+                <h3><b style="color: white; background-color: red">Deprecated</b> Bearer token (sent in a "Token" header)</h3>
+                <p><code>curl -H "Token: TOKEN" https://api.powerli.ne</code></p>
+                <h3><b style="color: white; background-color: red">Deprecated</b> Bearer token (sent in an "Authorization" header with an additional user's type)</h3>
+                <p><code>curl -H "Authorization: Bearer type='user' token='TOKEN'" https://api.powerli.ne</code></p>
             </div>
         </li>
         <li class="section active">
             <div class="actions">
                 <a class="action-show-hide">Show/hide</a>
             </div>
-            <h1>Errors</h1>
+            <h1 id="section-Errors">Errors</h1>
             <p class="section-list">
                 Powerline API uses conventional HTTP response codes to indicate the success or failure of an API request. In general, codes in the <code>2xx</code> range indicate success, codes in the <code>4xx</code> range indicate an error that failed given the information provided (e.g., a required parameter was omitted, a charge failed, etc.), and codes in the <code>5xx</code> range indicate an error with Powerline's servers (these are rare).
                 <br>
                 <br>
                 <code lang="json">{"code": 400, "message": "Error message"}</code>
+                <br>
+                <br>
+                <b>POST / PUT / PATCH</b> endpoints can additionally provide error messages for request parameters:
+            </p>
+            <pre><code lang="json">
+{
+    "code": 400,
+    "message": "Validation Failed",
+    "errors": {
+        "errors": [
+            "This form should not contain extra fields."
+        ],
+        "children": {
+            "username": {
+                "errors": [
+                    "This value should not be blank."
+                ],
+            },
+            "sub_entity": {
+                "children": {
+                    // ...
+                }
+            }
+        }
+    }
+}
+                </code></pre>
+        </li>
+        <li class="section active">
+            <div class="actions">
+                <a class="action-show-hide">Show/hide</a>
+            </div>
+            <h1 id="section-Schema">Schema</h1>
+            <p class="section-list">
+                All API access is over HTTPS, and accessed from the
+                <code>{{ app.request.schemeAndHttpHost }}/api</code>.
+                All data is received as JSON.
+            </p>
+            <p class="section-list">
+                Blank fields are included as <code>null</code> instead of being omitted.
             </p>
         </li>
     </ul>
