--- a/backend/src/Civix/ApiBundle/Resources/views/motd.html.twig
+++ b/backend/src/Civix/ApiBundle/Resources/views/motd.html.twig
@@ -67,12 +67,12 @@
                 Blank fields are included as <code>null</code> instead of being omitted.
             </p>
         </li>
-        <li class="section active">
+        <li class="section">
             <div class="actions">
                 <a class="action-show-hide">Show/hide</a>
             </div>
             <h1 id="section-Push">Push notifications</h1>
-            <table class="section-list">
+            <table class="section-list" style="display: none;">
                 <thead>
                 <tr>
                     <th>Id</th>
@@ -334,14 +334,14 @@
                     <td>Share</td>
                     <td>ic_civix_share</td>
                 </tr>
-                <tr style="background-color: lightgrey"><td colspan="3">Petition created</td></tr>
+                <tr style="background-color: lightgrey"><td colspan="3">Leader petition created</td></tr>
                 <tr style="border: 1px solid lightgrey">
-                    <td>sign-petition-button</td>
+                    <td>sign-leader-petition-button</td>
                     <td>Sign</td>
                     <td>ic_civix_sign</td>
                 </tr>
                 <tr style="border: 1px solid lightgrey">
-                    <td>view-petition-button</td>
+                    <td>view-leader-petition-button</td>
                     <td>View</td>
                     <td>ic_civix_view</td>
                 </tr>
